# acdatservice

./: .gitignore  Cargo.toml  README.md  TODO  package-lock.json  package.json  tsconfig.json  wrangler.toml
acdatlibjs/: package-lock.json  package.json
acdatlibjs/src/: index.ts
acdatservice/: package-lock.json  package.json
acdatservice/src/: DatDatabaseHeader.ts  DatDirectory.ts  DatDirectoryHeader.ts  DatFile.ts  DatReader.ts  index.test.ts  index.ts  lib.test.ts  lib.ts  portal_icon.ts  seekable_file_reader.ts
acdatservice/src/dat/: DatDatabase.ts  DatDirectory.ts  DatDirectoryHeader.ts  DatFile.ts  Texture.ts  portal_icon.ts
r2-worker/: package-lock.json  package.json  wrangler.jsonc
r2-worker/src/: index.ts
rsw/: Cargo.toml  wrangler.toml
rsw/src/: lib.rs
scripts/: sync_d1.sh
src/: counting_reader.rs  db.rs  index.ts  lib.rs  lib_test.rs  main.rs  openapi.rs  routes.rs
src/generators/: icon.rs
