[package]
name = "rsw"
version = "0.1.0"
edition = "2021"
authors = ["Bryce Mecum <petridish@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "create_index"
required-features = ["index"]

[[bin]]
name = "dropshot_server"
required-features = ["dropshot"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libac-rs = { version = "0.1.0", path = "../libac-rs", default-features = false, features = [
  "core",
  "cloudflare",
] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
worker = { version = "0.6.1", features = ["http", "d1"] }
byteorder = "1.5.0"
byteutils = "0.1.0"
console_error_panic_hook = { version = "0.1.1" }
image = { version = "0.25.5", default-features = false, features = ["png"] }

# Optional dependencies for non-WASM builds
dropshot = { version = "0.16.2", optional = true }
sqlite = { version = "0.36.1", optional = true }
tokio = { version = "1.45.1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "io-util",
], optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }

[features]
default = ["index"]
dropshot = ["dep:dropshot", "dep:tokio"]
index = ["dep:sqlite", "dep:strum"]
