[package]
name = "acdatservice"
description = "AC DAT service running on Cloudflare Workers"
version = "0.1.0"
edition = "2021"
authors = ["Bryce Mecum <petridish@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "create_index"
required-features = ["index"]

[[bin]]
name = "dropshot_server"
required-features = ["dropshot"]

[dependencies]
acprotocol = { path = "../asheron-rs/crates/acprotocol", default-features = false, features = [
  "dat-cloudflare",
  "dat-export",
] }
byteorder = "1.5.0"
byteutils = "0.1.0"
console_error_panic_hook = { version = "0.1.1" }
# Optional dependencies for non-WASM builds
dropshot = { version = "0.16.2", optional = true }
image = { version = "0.25.5", default-features = false, features = ["png"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite = { version = "0.36.1", optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }
worker = { version = "0.7.2", features = ["d1", "http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = [
  "io-util",
  "macros",
  "rt-multi-thread",
  "time",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.45.1", features = [
  "io-util",
  "macros",
  "rt",
  "time",
], optional = true }

[features]
default = []
dropshot = ["dep:dropshot", "dep:tokio"]
index = ["dep:sqlite", "dep:strum"]
