[package]
name = "rsw"
version = "0.1.0"
edition = "2021"
authors = ["Bryce Mecum <petridish@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.1" }
image = "0.25.5"
worker = { version = "0.5.0", features = ["http", "d1"] }
